<resources>
    <string name="app_name">Pet Dating</string>
    <string name="signin_heading">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="remember">Remember Me</string>
    <string name="no_account">Dont have account? Sign Up</string>
    <string name="or">OR</string>
    <string name="fb_login">Continue with Facebook</string>
    <string name="google_login">Contiue With Google</string>

    <string name="facebook_app_id" translatable="false">747187555752150</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb747187555752150</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="forgot_text">By Clicking Reset button you will receive email to
                reset your password.</string>
    <string name="adopt">Adopt</string>
    <string name="mate">Mate</string>
    <string name="filter">Filter</string>
    <string name="add">Add</string>
    <string name="title_activity_adoption_filter">AdoptionFilter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_text_to_generate">Enter Details</string>
    <string name="my_pets">My Pets</string>

</resources>